--- a/src/containers/App/global.css
+++ b/src/containers/App/global.css
@@ -16,7 +16,7 @@ html,
 body,
 html a {
   margin-bottom: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
