Added Discoin logo. Discount and Rewards functional.

--- a/src/containers/App/global.css
+++ b/src/containers/App/global.css
@@ -319,3 +319,14 @@ html[dir='rtl'] .dz-hidden-input {
   line-height: 1.9rem;
 }
 
+
+.logoSidebarOpen{
+  width:auto;
+  height: 40px;
+  margin-right: 10px;
+  
+}
+.logoSidebarClosed{
+  width:auto;
+  height: 30px;
+}
