--- a/src/containers/App/global.css
+++ b/src/containers/App/global.css
@@ -330,3 +330,52 @@ html[dir='rtl'] .dz-hidden-input {
   width:auto;
   height: 30px;
 }
+
+.tx_list_item{
+  display:block;
+}
+
+.tx_list_item_container{
+  float: right;
+  flex:1;
+  display: flex;
+  flex-direction: row ;
+  justify-content: center;
+  align-items:center;
+}
+
+.tx_list_item_amount {
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 1.1;
+}
+
+.tx_list_item_amount_icon {
+  margin-right:5px;
+  margin-bottom:5px;
+}
+
+.tx_list_item_data_container{
+  display:flex; 
+  flex-direction:row;
+}
+
+.tx_list_item_data_container span.first{
+  flex:1;
+}
+.tx_list_item_data_container span.second{
+  flex:2; 
+  text-align:right;
+  font-weight: bold;
+}
+.tx_list_item_data_container span.second span{
+  font-weight: bold;
+  text-align:right;
+}
+
+.tx_list_item_data_container div.flex5{
+  flex:5;
+}
+.tx_list_item_data_container div.flex1{
+  flex:1;
+}
