--- a/src/containers/App/global.css
+++ b/src/containers/App/global.css
@@ -379,3 +379,5 @@ html[dir='rtl'] .dz-hidden-input {
 .tx_list_item_data_container div.flex1{
   flex:1;
 }
+
+.add_subaccount_box .ant-calendar-picker-large{width:100%!important;}
